# icymi_glam

./: README.md  _config.yml  api.py  formatters.py  index.md  models.py  pyproject.toml  run.py  scorers.py  tests.py
.github/workflows/: update.yml
_sass/minima/: custom-styles.scss
fixtures/cassettes/: consent.yaml  new_follows.yaml  new_follows_nobot.yaml  new_follows_noindex.yaml  unfollow.yaml
render/: style.css  style.js
templates/: digest.html.jinja  posts.html.jinja  style.html.jinja
